src/styles/Cart.css
.cart {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.cart-header {
  border-bottom: 4px dotted black;
  padding-bottom: 10px;
  text-transform: uppercase;
  line-height: 1.5;
  letter-spacing: 1px;
  width: clamp(156px, 95%, 1350px);
  text-align: center;
}

.cart-content {
  padding-top: 10px;
  display: flex;
  align-items: flex-end;
  flex-direction: column;
  margin-top: 32px;
  width: clamp(310px, 100%, 500px);
}

.empty-cart {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 40px;
}

.empty-cart-text {
  font-size: 20px;
  text-align: center;
}

.continue-shopping {
  background-color: var(--blue);
  padding: 12px 22px;
  border-radius: 4px;
}

.subtotal {
  margin-top: 20px;
  padding-bottom: 20px;
  margin-bottom: 20px;
  font-weight: bold;
  font-family: "Montserrat-SemiBold", sans-serif;
  width: 100%;
  text-align: right;
  border-bottom: 1px solid rgb(195, 195, 195);
}

.subtotal-amount {
  color: green;
  letter-spacing: 0.5px;
}

.checkout {
  font-family: "Montserrat-Bold", sans-serif;
  text-transform: uppercase;
  line-height: 1.5;
  letter-spacing: 0.3px;
  color: var(--white);
  border: none;
  background-color: var(--blue);
  padding: 8px 24px;
  border-radius: 2px;
}

